k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: morphsave-production
  labels:
    name: morphsave-production
    environment: production
